generating line chart

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -27,7 +27,11 @@
     padding: 0 5px;
 }
 
-.draw_gauge {
+.ustream-container {
+    width: 480px;
+    margin: auto;
+}
+.draw-gauge {
     width: 400px;
     margin: auto;
 }
