--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -28,9 +28,20 @@
 }
 
 .ustream-container {
-    width: 480px;
-    margin: auto;
+    position: relative;
+    padding-bottom: 56.25%;
+    height: 0;
+    overflow: hidden;
+
+    iframe {
+        position: absolute;
+        top:0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
 }
+
 .draw-gauge {
     width: 400px;
     margin: auto;
